--- a/src/app/contact/contact.component.css
+++ b/src/app/contact/contact.component.css
@@ -25,13 +25,17 @@ img{
     width: 100%;
 }
 .TabelData{
-    height: 200px;
     width: 100%;
     background-color: #f7f7f7;
-    box-shadow: 0px 0px 8px grey;
+    /* box-shadow: 0px 0px 8px grey; */
+}
+.PostBox{
+    box-shadow: 0px 0px 2px grey;
+    padding: 10px;
+    margin-top: 10px;
 }
 .PostFont{
-    font-size: 40px;
+    font-size: 20px;
 }
 
 .RemveStyle{
