--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -19,29 +19,35 @@
     <div class="Post_Section">
         <div class="row">
             <div class="col-md-11">
-                <textarea name="PostDiscrioption" placeholder="What is your minde" class="w-100" id="postDtion" #Post
-                    rows="2"></textarea>
+                <input class="form-control" type="file" id="formFile" (change)="ImageUploadMethod($event)">
+                <textarea name="PostDiscrioption" placeholder="What is your minde" class="w-100" id="postDtion" [(ngModel)]="postClass.description" rows="2"> 
+                </textarea>
             </div>
             <div class="col-md-1">
-                <span type="button" class=" PostB p-2" (click)="PostMethod(Post)">Post</span>
+                <span type="button" class=" PostB p-2" (click)="PostMethod()">Post</span>
             </div>
         </div>
     </div>
     <div class="post_area">
-        <div class="rew" >
-            <div *ngFor="let item of PostList">
+        <div class="rew">
+            <div *ngFor="let item of ListOfImage" class="PostBox">
                 <h3 class="text-primary">{{UserClass.name}}</h3>
-                <div class="TabelData d-flex justify-content-center">
-                    <div class="align-self-center PostFont">{{item.description}}</div>
+                <div class="TabelData d-flex">
+                    <div class=" PostFont">{{item.description}}</div>
                 </div>
+                <img [src]="'data:image/jpg;base64,'+item.image" alt="Image">
                 <span class="mx-2 text-primary">Like</span>
                 <span class="mx-2">Comment</span>
                 <span class="mx-2 RemveStyle" (click)="PostDeleted(item)">Remove Post</span>
                 <span class="mx-2" (click)="EditMethod(item)">Edit</span>
                 <br><br>
             </div>
-         
+
         </div>
+    </div>
+    <div class="footer_section my-4 p-3 bg-info d-flex justify-content-between">
+        <p>I ma Footer</p> 
+        <button class="btn btn-danger" type="button" routerLink="/Login">Log Out</button>
     </div>
 </div>
 
@@ -51,25 +57,26 @@
 
 
 <!-- Button trigger modal -->
-<button type="button" class="btn btn-primary" id="ModalOpenId" hidden data-bs-toggle="modal" data-bs-target="#exampleModal">
+<button type="button" class="btn btn-primary" id="ModalOpenId" hidden data-bs-toggle="modal"
+    data-bs-target="#exampleModal">
     Launch demo modal
-  </button>
-  
-  <!-- Modal -->
-  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+</button>
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        <div class="modal-content">
+            <div class="modal-header">
+                <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <input type="text" name="description" [(ngModel)]="postClass.description">
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                <button type="button" class="btn btn-primary" (click)="UpdatePostMethod()">Update Post</button>
+            </div>
         </div>
-        <div class="modal-body">
-            <input type="text" name="description" [(ngModel)]="Description" >
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-          <button type="button" class="btn btn-primary" (click)="UpdatePostMethod()">Update Post</button>
-        </div>
-      </div>
     </div>
-  </div>
+</div>
