--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
-    <div class="container-fluid">
+    <div class="container-fluid" *ngIf="false">
         <a class="navbar-brand"><img src="../../assets/f imege.png" alt=""></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
             <span class="navbar-toggler-icon"></span>
@@ -11,10 +11,10 @@
                 <li class="nav-item"><a class="nav-link" routerLink="/Product">Product</a></li>
                 <li class="nav-item"><a class="nav-link" routerLink="/AgGrid">AgGrid</a></li>
                 <li class="nav-item"><a class="nav-link" routerLink="/Admin">Admin Info</a></li>
-                <li class="nav-item"><a class="nav-link" routerLink="/Contact">Profile</a></li>
+                <li class="nav-item"><a class="nav-link" routerLink="/Contact/:id">Profile</a></li>
                 <li class="nav-item"><a class="nav-link" routerLink=" ">Address</a></li>
             </ul>
-            <form class="d-flex">
+            <form class="d-flex" *ngIf="true">
                 <button class="btn btn-primary" type="button" routerLink="/">Login</button>
                 <button class="btn btn-secondary mx-2" type="button" routerLink="/SineUp">Sine Up</button>
             </form>
