--- a/src/app/sine-up-component/sine-up-component.component.html
+++ b/src/app/sine-up-component/sine-up-component.component.html
@@ -1,36 +1,51 @@
-<div class="container">
-    <h2 class="text-center py-4 bg-secondary text-white mb-5">Sine Up Component</h2>
-    <form action="" class="was-validated">
-        <div class="form-floating mb-2">
-            <input type="text" class="form-control" id="floatingInput" placeholder="Your Name" required
-                [(ngModel)]="oPractice.name" name="name">
-            <label for="floatingInput">Your Name</label>
-            <div class="invalid-feedback">Please fill out this Name.</div>
+<div class="outer ">
+    <div class="container ">
+        <div class="row">
+            <div class="offset-md-3 col-lg-5 col-md-7 offset-md-2">
+                <div class="panel border bg-white">
+                    <div class="panel-heading">
+                        <h3 class="pt-3 font-weight-bold">Sign Up</h3>
+                    </div>
+                    <div class="panel-body p-4">
+                        <form>
+                            <div class="form-group pt-3">
+                                <div class="input-field">
+                                    <span class="fa fa-user p-2"></span>
+                                    <input type="text" placeholder="Name">
+                                </div>
+                            </div>
+                            <div class="form-group pt-3">
+                                <div class="input-field">
+                                    <span class="fa fa-envelope-o p-2"></span>
+                                    <input type="text" placeholder="Email">
+                                </div>
+                            </div>
+                            <div class="form-group pt-3">
+                                <div class="input-field">
+                                    <span class="fa fa-lock p-2"></span>
+                                    <input [type]="type" placeholder="Password">
+                                    <span (click)="hideShow()" class="fa {{eyeIcom}}"></span>
+                                </div>
+                            </div>
+                            <div class="form-group pt-3">
+                                <div class="input-field">
+                                    <span class="fa fa-phone p-2"></span>
+                                    <input type="text" placeholder="Contact">
+                                </div>
+                            </div>
+                            <div class="form-group pt-3">
+                                <div class="input-field">
+                                    <span class="fa fa-address-card-o p-2"></span>
+                                    <input type="text" placeholder="Address">
+                                </div>
+                            </div>
+                            <button type="button" class="btn btn-primary btn-block mt-4 w-100">Sign Up</button>
+                            <div class="text-center mt-3">Already have account?<a id="forget"
+                                    routerLink="/Login">Login</a></div>
+                        </form>
+                    </div>
+                </div>
+            </div>
         </div>
-        <div class="form-floating mb-2">
-            <input type="email" class="form-control" id="emailID" placeholder="Email Address" required
-                [(ngModel)]="oPractice.email" name="email">
-            <label for="emailID">Email address</label>
-            <div class="invalid-feedback">Please fill out this Email.</div>
-        </div>
-        <div class="form-floating mb-2">
-            <input type="text" class="form-control" id="accoutId" placeholder="Password" required
-                [(ngModel)]="oPractice.password" name="account">
-            <label for="accoutId">Password</label>
-            <div class="invalid-feedback">Please fill out this Number.</div>
-        </div>
-        <div class="form-floating mb-2">
-            <input type="text" class="form-control" id="contactid" placeholder="Contact Number" required
-                [(ngModel)]="oPractice.contact" name="contact">
-            <label for="contactid">Contact Number</label>
-            <div class="invalid-feedback">Please fill out this Contact.</div>
-        </div>
-        <div class="form-floating mb-2">
-            <input type="text" class="form-control" id="addressId" placeholder="Address" required 
-            [(ngModel)]="oPractice.address" name="address">
-            <label for="addressId">Address</label>
-            <div class="invalid-feedback">Please fill out this Address</div>
-        </div>
-        <button type="button" class="btn btn-info" (click)="PostData()" >Submit</button>
-    </form>
+    </div>
 </div>
